--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nodebb-theme-quickstart",
-  "version": "0.0.0",
+  "name": "nodebb-theme-gr420",
+  "version": "0.0.1",
   "description": "Enter a description here",
   "main": "theme.less",
   "keywords": [
